# PDF-EDITOR-PRO

./: .gitignore  .replit  ANDROID_APK_BUILD_GUIDE.txt  APPENDED_DETAILED_BUTTON_AND_UNDERLINE_TESTING.txt  COMPLETE_APPLICATION_FUNCTIONAL_TEST_REPORT.csv  COMPLETE_APPLICATION_FUNCTIONAL_TEST_REPORT.xlsx  COMPLETE_APPLICATION_TESTING_SUMMARY.txt  COMPLETE_UI_ELEMENTS_INVENTORY(AutoRecovered).csv  COMPONENT_TESTING_REPORT(AutoRecovered).csv  COMPREHENSIVE_APPLICATION_TESTING_REPORT.csv  COMPREHENSIVE_FUNCTIONAL_TESTING.md  COMPREHENSIVE_UI_FUNCTIONAL_TESTING_DETAILED.csv  CONVERSION_VERIFICATION_REPORT.md  DEPLOYMENT.md  DETAILED_UI_FUNCTIONAL_TESTING-work.xlsx  DETAILED_UI_FUNCTIONAL_TESTING.csv  EXECUTIVE_SUMMARY.txt  FINAL_IMPLEMENTATION_STATUS.txt  GITHUB_PUBLISHING_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.txt  MCP_DEPLOYMENT_GUIDE.txt  MOBILE_APP_PUBLISHING_GUIDE.md  PROFESSIONAL_UPGRADES_SUMMARY.md  Professional_vs_NonProfessional_Tools.csv  QUICK_REFERENCE.txt  README.md  README_COMPLETE_TESTING.txt  README_UPGRADES.md  TESTING_COMPLETION_CHECKLIST.txt  TESTING_RED_AREAS_FROM_SCREENSHOT.txt  TESTING_SUMMARY_DASHBOARD.md  THREE_TOOLS_IMPLEMENTATION_COMPLETE.md  TOOL_STATUS_REPORT.csv  Tools_Professional_Status.csv  Tools_Status_Report.csv  UI_ELEMENTS_COMPLETE_INVENTORY.csv  UI_ELEMENTS_COMPLETE_INVENTORY.xlsx  UPGRADE_IMPACT_METRICS.txt  VERCEL_BUILD_NOTE.txt  (+42 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
attached_assets/: Pasted--PDF-EDITOR-PRO-AP-1765697388878_1765697388880.txt  (+2 more)
backend/: Dockerfile  mcp_requirements.txt  (+3 more)
(+229 files in other folders)
