[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdf2docx>=0.5.8",
    "pdfplumber>=0.11.8",
    "pymupdf>=1.26.7",
    "pypdf2>=3.0.1",
    "python-pptx>=1.0.2",
]
